fixed nullpointer on PageFactory

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -101,17 +101,17 @@
                     <div class="method-list-content passed suite-Order_Intent_Pizza_Test">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="runtest">runtest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="runtest">runtest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="runtest">runtest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Order_Intent_Pizza_Test -->
@@ -134,23 +134,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runtest">
-                  </a> <!-- runtest -->
-                  <span class="method-name">runtest</span>
+                  <a name="LoginTest">
+                  </a> <!-- LoginTest -->
+                  <span class="method-name">LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runtest">
-                  </a> <!-- runtest -->
-                  <span class="method-name">runtest</span>
+                  <a name="LoginTest">
+                  </a> <!-- LoginTest -->
+                  <span class="method-name">LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runtest">
-                  </a> <!-- runtest -->
-                  <span class="method-name">runtest</span>
+                  <a name="LoginTest">
+                  </a> <!-- LoginTest -->
+                  <span class="method-name">LoginTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -228,22 +228,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'runtest')
+data.setCell(0, 1, 'LoginTest')
 data.setCell(0, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(0, 3, 16663);
+data.setCell(0, 3, 7993);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runtest')
+data.setCell(1, 1, 'LoginTest')
 data.setCell(1, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(1, 3, 11412);
+data.setCell(1, 3, 4378);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runtest')
+data.setCell(2, 1, 'LoginTest')
 data.setCell(2, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(2, 3, 6535);
+data.setCell(2, 3, 2902);
 window.suiteTableData['Order_Intent_Pizza_Test']= { tableData: data, tableDiv: 'times-div-Order_Intent_Pizza_Test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Order_Intent_Pizza_Test">
               </div> <!-- times-div-Order_Intent_Pizza_Test -->
             </div> <!-- times-div -->
@@ -271,7 +271,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">net.intentmedia.internal.pizzaintent.tests.TestOrderPizza</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">launchBrowser(FF)</span>
+                <span class="method-name">launchBrowser(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
@@ -279,32 +279,32 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
-                <span class="method-name">launchBrowser(Chrome)</span>
+                <span class="method-name">launchBrowser(FF)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">runtest</span>
-                <span class="method-start">16826 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">4648 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">runtest</span>
-                <span class="method-start">29939 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">4724 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">33490 ms</span>
+                <span class="method-start">9028 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">41352 ms</span>
+                <span class="method-start">12719 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">runtest</span>
-                <span class="method-start">47063 ms</span>
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">13909 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">53599 ms</span>
+                <span class="method-start">16812 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
