--- a/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
+++ b/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Order Intent Pizza Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:11:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@25cd0888]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@506121317</td>   <td></td> </tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:11:18</td>   <td>7862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7c29e357]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:11:30</td>   <td>20109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@e60e128]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1291305757</td>   <td></td> </tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:10:37</td>   <td>-33484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@e60e128]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1291305757</td>   <td></td> </tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:10:37</td>   <td>-33484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7c29e357]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="9ebc73">  <td>15/02/19 00:10:37</td>   <td>-33484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@25cd0888]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@506121317</td>   <td></td> </tr>
-<tr bgcolor="a1b571">  <td>15/02/19 00:10:54</td>   <td>-16664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.runtest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@25cd0888]">runtest</td> 
-  <td>TestNG@506121317</td>   <td></td> </tr>
-<tr bgcolor="a1b571">  <td>15/02/19 00:11:07</td>   <td>-3551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.runtest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7c29e357]">runtest</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 10:19:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
+  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 10:19:03</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
   <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="a1b571">  <td>15/02/19 00:11:24</td>   <td>13573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.runtest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@e60e128]">runtest</td> 
-  <td>TestNG@1291305757</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 10:19:12</td>   <td>9261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:19:07</td>   <td>4381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:19:11</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:19:15</td>   <td>12164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
 </table>
