--- a/test-output/index.html
+++ b/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -99,6 +99,21 @@
                       <a href="#" panel-name="suite-Order_Intent_Pizza_Test" class="show-methods passed suite-Order_Intent_Pizza_Test"> (show)</a> <!-- show-methods passed suite-Order_Intent_Pizza_Test -->
                     </span>
                     <div class="method-list-content passed suite-Order_Intent_Pizza_Test">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="AccountPageTest">AccountPageTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Order_Intent_Pizza_Test" title="net.intentmedia.internal.pizzaintent.tests.TestOrderPizza" hash-for-method="LoginTest">LoginTest</a> <!-- method navigator-link -->
@@ -132,6 +147,27 @@
               <span class="class-name">net.intentmedia.internal.pizzaintent.tests.TestOrderPizza</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="AccountPageTest">
+                  </a> <!-- AccountPageTest -->
+                  <span class="method-name">AccountPageTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="AccountPageTest">
+                  </a> <!-- AccountPageTest -->
+                  <span class="method-name">AccountPageTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="AccountPageTest">
+                  </a> <!-- AccountPageTest -->
+                  <span class="method-name">AccountPageTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="LoginTest">
@@ -226,24 +262,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginTest')
+data.setCell(0, 1, 'AccountPageTest')
 data.setCell(0, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(0, 3, 7993);
+data.setCell(0, 3, 5518);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginTest')
 data.setCell(1, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(1, 3, 4378);
+data.setCell(1, 3, 4310);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginTest')
+data.setCell(2, 1, 'AccountPageTest')
 data.setCell(2, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
-data.setCell(2, 3, 2902);
+data.setCell(2, 3, 4105);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'AccountPageTest')
+data.setCell(3, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(3, 3, 3985);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'LoginTest')
+data.setCell(4, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(4, 3, 2841);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'LoginTest')
+data.setCell(5, 2, 'net.intentmedia.internal.pizzaintent.tests.TestOrderPizza')
+data.setCell(5, 3, 2613);
 window.suiteTableData['Order_Intent_Pizza_Test']= { tableData: data, tableDiv: 'times-div-Order_Intent_Pizza_Test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Order_Intent_Pizza_Test">
               </div> <!-- times-div-Order_Intent_Pizza_Test -->
             </div> <!-- times-div -->
@@ -271,7 +319,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">net.intentmedia.internal.pizzaintent.tests.TestOrderPizza</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">launchBrowser(Chrome)</span>
+                <span class="method-name">launchBrowser(FF)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
@@ -279,32 +327,68 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
-                <span class="method-name">launchBrowser(FF)</span>
+                <span class="method-name">launchBrowser(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">4648 ms</span>
+                <span class="method-name">AccountPageTest</span>
+                <span class="method-start">4026 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">LoginTest</span>
-                <span class="method-start">4724 ms</span>
+                <span class="method-name">AccountPageTest</span>
+                <span class="method-start">4144 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">9028 ms</span>
+                <span class="method-start">8132 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">12719 ms</span>
+                <span class="method-start">9663 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(Chrome)</span>
+                <span class="method-start">10647 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(IE)</span>
+                <span class="method-start">10703 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">AccountPageTest</span>
+                <span class="method-start">14239 ms</span>
+              </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">LoginTest</span>
-                <span class="method-start">13909 ms</span>
+                <span class="method-start">14308 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">14374 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">16812 ms</span>
+                <span class="method-start">17150 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">18225 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">18685 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser(FF)</span>
+                <span class="method-start">18724 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">27839 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowser</span>
+                <span class="method-start">30453 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
