--- a/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
+++ b/test-output/old/Order Intent Pizza Test/methods-alphabetical.html
@@ -1,22 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Order Intent Pizza Test</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ef737d">  <td>15/02/19 10:19:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
-  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 10:19:03</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
-  <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="ef737d">  <td>15/02/19 10:19:12</td>   <td>9261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:12:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">AccountPageTest</td> 
   <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:19:07</td>   <td>4381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:19:11</td>   <td>8071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:19:15</td>   <td>12164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="ef737d">  <td>15/02/19 12:12:54</td>   <td>118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">AccountPageTest</td> 
+  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.AccountPageTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">AccountPageTest</td> 
+  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">LoginTest</td> 
+  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:13:04</td>   <td>10348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">LoginTest</td> 
+  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="ef737d">  <td>15/02/19 12:13:17</td>   <td>23813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestOrderPizza.LoginTest()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">LoginTest</td> 
+  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:12:58</td>   <td>4107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:12:59</td>   <td>5638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG@198249052</td>   <td></td> </tr>
-<tr bgcolor="c791b9">  <td>15/02/19 10:18:58</td>   <td>-4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:07</td>   <td>13125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:20</td>   <td>26427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LaunchIntentPizzaTestCases.closeBrowser()[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:12:49</td>   <td>-4018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>6622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@37eb2c1b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1224680467</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:00</td>   <td>6678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@220ca470]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1721336021</td>   <td></td> </tr>
+<tr bgcolor="c791b9">  <td>15/02/19 12:13:08</td>   <td>14698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LaunchIntentPizzaTestCases.launchBrowser(java.lang.String)[pri:0, instance:net.intentmedia.internal.pizzaintent.tests.TestOrderPizza@7a5e1077]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG@1742296210</td>   <td></td> </tr>
 </table>
